--- a/_locales/zh-cn/IoT_Cloud_Kit-strings.json
+++ b/_locales/zh-cn/IoT_Cloud_Kit-strings.json
@@ -25,7 +25,7 @@
     "microIoT.microIoT_showUserNumber|block": "OLED 显示屏 第%line行|显示数字%n",
     "microIoT.microIoT_showUserText|block": "OLED 显示屏 第%line行|显示文本%text",
     "microIoT.microIoT_clear|block": "OLED清屏",
-    "microIoT.initEquipment|block": "初始化设备",
+    "microIoT.initDevice|block": "初始化设备",
     "microIoT.microIoT_showColor|block": "显示颜色 |%rgb",
     "microIoT.microIoT_setIndexColor|block": "设置 灯号 |%index 颜色|%rgb",
     "microIoT.microIoT_ledRange|block": "灯号 从|%from 到|%to",
